--- a/now.json
+++ b/now.json
@@ -4,7 +4,7 @@
   	{ "handle": "filesystem" },
   	{ "src": "/", "dest": "/index.html" },
   	{ "src": "/opencv/(.*)", "dest": "/404.html"},
-  	{ "src": "/([a-zA-Z0-9-]+)/([a-zA-Z0-9-]+)/blob/([a-zA-Z0-9-]+)/(.*)", "dest": "https://https://raw.githubusercontent.com/$1/$2/$3/$4"},
-  	{ "src": "/(.*)", "dest": "https://https://raw.githubusercontent.com/$1"}
+  	{ "src": "/([a-zA-Z0-9-]+)/([a-zA-Z0-9-]+)/blob/([a-zA-Z0-9-]+)/(.*)", "dest": "https://raw.githubusercontent.com/$1/$2/$3/$4"},
+  	{ "src": "/(.*)", "dest": "https://raw.githubusercontent.com/$1"}
   ]
 }
