--- a/now.json
+++ b/now.json
@@ -3,9 +3,7 @@
   "routes": [
   	{ "handle": "filesystem" },
   	{ "src": "/", "dest": "/index.html" },
-  	{ "src": "/opencv/(.*)", "dest": "/404.html"},
-    { "src": "/wj2008/wjsb/(.*)", "dest": "/404.html"},
-    { "src": "/giscafer/leek-fund/(.*)", "dest": "/404.html"},
+  	{ "src": "/(opencv|wj2008|giscafer)/(.*)", "dest": "/404.html"},
   	{ "src": "/([a-zA-Z0-9-]+)/([a-zA-Z0-9-]+)/blob/([a-zA-Z0-9-]+)/(.*)", "dest": "https://raw.githubusercontent.com/$1/$2/$3/$4"},
   	{ "src": "/(.*)", "dest": "https://raw.githubusercontent.com/$1"}
   ]
