--- a/now.json
+++ b/now.json
@@ -4,8 +4,8 @@
   	{ "handle": "filesystem" },
   	{ "src": "/", "dest": "/index.html" },
   	{ "src": "/(tayuo|ygbhf|imagehosted|7ednet|openrepos|startsocks|staticdn-net|tootssocial)/([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/(.*)", "dest": "https://raw.githubusercontent.com/$1/$2/$3/$4" },
-  	{ "src": "/([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/blob/([a-zA-Z0-9_-]+)/(.*)", "status": 308, "headers": { "Location": "https://cdn.jsdelivr.net/gh/$1/$2@$3/$4"} },
-    { "src": "/([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/(.*)", "status": 308, "headers": { "Location": "https://cdn.jsdelivr.net/gh/$1/$2@$3/$4"} },
-  	{ "src": "/(.*)", "dest": "/404.html"}
+  	{ "src": "/([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/blob/([a-zA-Z0-9_-]+)/(.*)", "status": 308, "headers": { "Location": "https://raw.githubusercontents.com/$1/$2/$3/$4"} },
+    { "src": "/([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/(.*)", "status": 308, "headers": { "Location": "https://raw.githubusercontents.com/$1/$2/$3/$4"} },
+  	{ "src": "/(.*)", "status": 308, "headers": { "Location": "https://raw.githubusercontents.com/$1"} }
   ]
 }
